@@ -1,3 +1,8 @@
+2018-12-02  Mark Wielaard  <mark@klomp.org>
+
+	* eblobjnte.c (ebl_object_note): For GNU_PROPERTY_STACK_SIZE use
+	an Elf32_Addr or Elf64_Addr to read and print the size.
+
 2018-11-15  Mark Wielaard  <mark@klomp.org>
 
 	* eblobjnotetypename.c (ebl_object_note_type_name): Don't update
